2000-03-19  Tom Tromey  <tromey@cygnus.com>

	Fix for PR automake/41:
	* automake.in (require_file_found): New global.
	(require_file_internal): Set require_file_found entry.
	(handle_texinfo): Require file any number of times.

	* automake.in (handle_dist_worker): Exit if `cp' fails.  Fixes
	install2.test.

	* tags.am: Don't reference $$here.  Report from Sven Verdoolaege.

2000-03-13  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* m4/missing.m4: Print the backtick in a way that won't cause
	autoconf CVS to emit any warnings.

2000-03-01  Jim Meyering  <meyering@lucent.com>

	* automake.in (handle_dist_worker) [generating rules for distdir]:
	Don't use `ln' (which was just a space optimization anyway) to
	populate $(distdir).  Otherwise, the dist rules that change
	permissions would end up affecting the master sources.
	* texinfos.am (dist-info): Likewise.

2000-02-13  Jim Meyering  <meyering@lucent.com>

	* automake.in (generate_makefile): Detect write/close failure.

2000-02-02  Assar Westerlund  <assar@sics.se>

	* automake.in (handle_single_transform_list): do not use $< which
	is not handled by all non-GNU makes.  Instead do explicit sh code
	testing for the file in this directory and srcdir.  Based on a
	suggestion by Alexandre Oliva <oliva@lsd.ic.unicamp.br>

2000-01-12  Tom Tromey  <tromey@cygnus.com>

	* m4/lispdir.m4: Added --with-lispdir argument processing.
	From Kevin Dalley.

2000-01-06  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_configure): Don't check for
	AC_PROG_MAKE_SET.
	(scan_configure): Check for AC_PROG_MAKE_SET.

	* header-vars.am (@SET_MAKE@): Added.
	* subdirs.am (@SET_MAKE@): Removed.  Report from Motoyuki
	Kasahara.

1999-12-19  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_dist_worker): Expand DIST_COMMON under all
	conditions.
	(require_file_internal): Corrected arguments to second invocation
	of maybe_push_required_file.

	Fix for PR automake/9:
	* automake.in (make_dirs, make_dirs_set): New globals.