@@ -1,5 +1,14 @@
 2000-03-19  Tom Tromey  <tromey@cygnus.com>
 
+	Fix for PR automake/45:
+	* automake.texi (configure): Mention requirement to run
+	AM_INIT_AUTOMAKE.
+	(Requirements): Removed most text.
+	* automake.in (seen_init_automake): New global.
+	(scan_configure): Error if AM_INIT_AUTOMAKE not seen.
+	(scan_one_configure_file): Don't support AM_INIT_GUILE_MODULE.
+	Set seen_init_automake if needed.
+
 	Fix for PR automake/41:
 	* automake.in (require_file_found): New global.
 	(require_file_internal): Set require_file_found entry.
